--- a/ShootingGame/Config/DefaultEngine.ini
+++ b/ShootingGame/Config/DefaultEngine.ini
@@ -2,6 +2,7 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+EditorStartupMap=/Game/ProjectContent/Maps/Sandbox.Sandbox
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
